Adicionado documentação via swagger-docs
